# pure-data

./: CMakeLists.txt
src/: Makefile.am  d_ugen.c  m_class.c  s_audio_pipewire.c  s_inter.c  s_stuff.h  x_list.c
